<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_Match"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="#8AD1C4E9"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/img_ModelMatch_Icon_A"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/club_logo"
        app:layout_constraintEnd_toStartOf="@+id/text_ModelMatch_ScoreBoard"
        app:layout_constraintTop_toBottomOf="@+id/border_top" />

    <TextView
        android:id="@+id/text_ModelMatch_Club_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/title_team_A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_ModelMatch_Icon_A"
        app:layout_constraintStart_toStartOf="@+id/img_ModelMatch_Icon_A"
        app:layout_constraintTop_toBottomOf="@+id/img_ModelMatch_Icon_A" />

    <TextView
        android:id="@+id/text_ModelMatch_ScoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ModelMatch_Description" />

    <TextView
        android:id="@+id/text_ModelMatch_TimeStatus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/title_Time_Status"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/text_ModelMatch_ScoreBoard"
        app:layout_constraintStart_toStartOf="@+id/text_ModelMatch_ScoreBoard"
        app:layout_constraintTop_toBottomOf="@+id/text_ModelMatch_ScoreBoard" />

    <ImageView
        android:id="@+id/img_ModelMatch_Icon_B"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/club_logo"
        app:layout_constraintStart_toEndOf="@+id/text_ModelMatch_ScoreBoard"
        app:layout_constraintTop_toBottomOf="@+id/border_top" />

    <TextView
        android:id="@+id/text_ModelMatch_Club_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/title_team_B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/img_ModelMatch_Icon_B"
        app:layout_constraintStart_toStartOf="@+id/img_ModelMatch_Icon_B"
        app:layout_constraintTop_toBottomOf="@+id/img_ModelMatch_Icon_B" />

    <TextView
        android:id="@+id/text_ModelMatch_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title_matches"
        app:layout_constraintEnd_toStartOf="@+id/img_ModelMatch_Icon_B"
        app:layout_constraintStart_toEndOf="@+id/img_ModelMatch_Icon_A"
        app:layout_constraintTop_toBottomOf="@+id/border_top" />

    <ImageView
        android:id="@+id/border_bottom"
        android:layout_width="250dp"
        android:layout_height="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/match_divisor" />

    <ImageView
        android:id="@+id/border_top"
        android:layout_width="250dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/match_divisor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/open_item_Match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/border_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_match"
            android:textColor="@color/purple_700"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_open_in_new" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ModelMatch_Club_A">

        <TextView
            android:id="@+id/text_ModelMatch_Goals_A"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_marginRight="16dp"
            android:text="@string/title_Goals_A"
            android:textAlignment="textEnd"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_ModelMatch_Goals_B"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/title_Goals_B"
            android:textAlignment="textStart"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>