<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_Group_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_GroupName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="+/-"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="P"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="Pts"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Group_Name" />
<!--    TEAM 1 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/image_TeamLogo_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_TeamLogo_"
        app:srcCompat="@drawable/ic_group_lateral_bar" />

    <ImageView
        android:id="@+id/image_TeamLogo_"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:srcCompat="@drawable/club_logo" />

    <TextView
        android:id="@+id/text_TeamName_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_team_Name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_TeamLogo_"
        app:layout_constraintStart_toEndOf="@+id/image_TeamLogo_"
        app:layout_constraintTop_toTopOf="@+id/image_TeamLogo_" />

    <TextView
        android:id="@+id/text_TeamP_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/text_TeamName_" />

    <TextView
        android:id="@+id/text_TeamBalance_"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/text_TeamP_" />

    <TextView
        android:id="@+id/text_TeamPts_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/text_TeamBalance_" />

<!--    TEAM 2 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/image_TeamLogo_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_TeamLogo_2"
        app:srcCompat="@drawable/ic_group_lateral_bar" />

    <ImageView
        android:id="@+id/image_TeamLogo_2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_TeamLogo_"
        app:srcCompat="@drawable/club_logo" />

    <TextView
        android:id="@+id/text_TeamName_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_team_Name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_TeamLogo_2"
        app:layout_constraintStart_toEndOf="@+id/image_TeamLogo_2"
        app:layout_constraintTop_toTopOf="@+id/image_TeamLogo_2" />

    <TextView
        android:id="@+id/text_TeamP_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/text_TeamName_2" />

    <TextView
        android:id="@+id/text_TeamBalance_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/text_TeamP_2" />

    <TextView
        android:id="@+id/text_TeamPts_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/text_TeamBalance_2" />

    <!--    TEAM 3 -->
    <ImageView
        android:id="@+id/image_TeamLogo_3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_TeamLogo_2"
        app:srcCompat="@drawable/club_logo" />

    <TextView
        android:id="@+id/text_TeamName_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_team_Name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_TeamLogo_3"
        app:layout_constraintStart_toEndOf="@+id/image_TeamLogo_3"
        app:layout_constraintTop_toTopOf="@+id/image_TeamLogo_3" />

    <TextView
        android:id="@+id/text_TeamP_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/text_TeamName_3" />

    <TextView
        android:id="@+id/text_TeamBalance_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/text_TeamP_3" />

    <TextView
        android:id="@+id/text_TeamPts_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/text_TeamBalance_3" />

    <!--    TEAM 3 -->
    <ImageView
        android:id="@+id/image_TeamLogo_4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_TeamLogo_3"
        app:srcCompat="@drawable/club_logo" />

    <TextView
        android:id="@+id/text_TeamName_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_team_Name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_TeamLogo_4"
        app:layout_constraintStart_toEndOf="@+id/image_TeamLogo_4"
        app:layout_constraintTop_toTopOf="@+id/image_TeamLogo_4" />

    <TextView
        android:id="@+id/text_TeamP_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/text_TeamName_4" />

    <TextView
        android:id="@+id/text_TeamBalance_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/text_TeamP_4" />

    <TextView
        android:id="@+id/text_TeamPts_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/text_TeamBalance_4" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/image_TeamLogo_4"
        app:layout_constraintTop_toBottomOf="@+id/image_TeamLogo_4"
        app:srcCompat="@drawable/ic_group_indicator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/qualified"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

</androidx.constraintlayout.widget.ConstraintLayout>